force-app/main/default/objects/CBK_Case_Extension__c/CBK_Case_Extension__c.object-meta.xml
<CustomObject>
    <description>Extension Object related to Case object</description>
    <label>Case Extension</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cases Extension</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>