force-app/main/default/objects/CBK_Case_Extension__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Field to Case object</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases Extension</relationshipLabel>
    <relationshipName>Cases_Extension</relationshipName>
    <type>Lookup</type>
</CustomField>