force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_Documentacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Documentacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentacion</label>
    <type>Checkbox</type>
</CustomField>