force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_EstadoONB__c.field-meta.xml
<CustomField>
    <fullName>CC_EstadoONB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>