force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_FAQ__c.field-meta.xml
<CustomField>
    <fullName>CC_FAQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar un caso con una faq</description>
    <label>FAQ</label>
    <referenceTo>CC_FAQ__c</referenceTo>
    <relationshipLabel>Cases Extension</relationshipLabel>
    <relationshipName>Cases_Extension</relationshipName>
    <type>Lookup</type>
</CustomField>