force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_FechaEstadoONB__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaEstadoONB__c</fullName>
    <description>Campo Fecha de estado de Onboarding</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>