force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_IA_Cumple_Condiciones_Prompts__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_Cumple_Condiciones_Prompts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que marca si un caso va a ser gestionado por IA o no.</description>
    <label>CC IA Cumple Condiciones Prompts</label>
    <type>Checkbox</type>
</CustomField>