force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_IA_Historico_ChatGpt__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_Historico_ChatGpt__c</fullName>
    <description>Almacena la conversación con el Asistente Chat GPT</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Histórico ChatGPT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>