force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_IA_Interacciones_Asistente_IA__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_Interacciones_Asistente_IA__c</fullName>
    <description>Refleja el numero de preguntas realizadas por el agente en el Asistente Interactivo</description>
    <label>Interacciones Asistente IA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>