force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_NumSR__c.field-meta.xml
<CustomField>
    <fullName>CC_NumSR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Num.SR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>