force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>CC_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para comprobar si en el caso se ha realizado la operativa de onboarding</description>
    <label>Onboarding</label>
    <type>Checkbox</type>
</CustomField>