force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_Oportunidad_Relacionada_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CC_Oportunidad_Relacionada_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad creada a partir de operativa derivar desde un caso</description>
    <label>Oportunidad relacionada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases Extension</relationshipLabel>
    <relationshipName>Opportunity_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>