force-app/main/default/objects/CBK_Case_Extension__c/fields/CC_SubestadoONB__c.field-meta.xml
<CustomField>
    <fullName>CC_SubestadoONB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SubEstado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>