force-app/main/default/objects/CBK_Case_Extension__c/fields/SAC_DespachoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>SAC_DespachoRepresentante__c</fullName>
    <description>Despacho representante obtenido desde los maestros de temas con el record type: Despacho representante</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Despacho representante</label>
    <type>TextArea</type>
</CustomField>