force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_CasoEnNegociacion__c.field-meta.xml
<CustomField>
    <fullName>SPV_CasoEnNegociacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo checkbox que indica si una reclamación se encuentra en negociación</description>
    <label>Caso en negociación</label>
    <type>Checkbox</type>
</CustomField>