force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_CasoRelacionadoSPV__c.field-meta.xml
<CustomField>
    <fullName>SPV_CasoRelacionadoSPV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso relacionado SPV</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases Extension (Caso relacionado SPV)</relationshipLabel>
    <relationshipName>Cases_Extension1</relationshipName>
    <type>Lookup</type>
</CustomField>