force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_ComentarioDevolucionCaso__c.field-meta.xml
<CustomField>
    <fullName>SPV_ComentarioDevolucionCaso__c</fullName>
    <description>Campo en el que se indicarán los comentarios cada vez que se devuelva el caso.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comentario de devolución del caso</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>