force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_FechaComplementariaEntidad__c.field-meta.xml
<CustomField>
    <fullName>SPV_FechaComplementariaEntidad__c</fullName>
    <description>Fecha apertura Estado Complementarias Entidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha complementaria entidad</label>
    <type>DateTime</type>
</CustomField>