force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_FechaComplementariaOrganismo__c.field-meta.xml
<CustomField>
    <fullName>SPV_FechaComplementariaOrganismo__c</fullName>
    <description>Fecha apertura Estado Complementarias Organismo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha complementaria organismo</label>
    <type>DateTime</type>
</CustomField>