force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_FechaEnvioOrganismos__c.field-meta.xml
<CustomField>
    <fullName>SPV_FechaEnvioOrganismos__c</fullName>
    <description>Fecha en la cual se pasa al estado &quot;Envío Organismos&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha propuesta</label>
    <type>DateTime</type>
</CustomField>