force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_MotivoDescarte__c.field-meta.xml
<CustomField>
    <fullName>SPV_MotivoDescarte__c</fullName>
    <label>Motivo Descarte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPV_001</fullName>
                <label>Error del Supervisor</label>
            </value>
            <value>
                <fullName>SPV_002</fullName>
                <label>Alta errónea</label>
            </value>
            <value>
                <fullName>SPV_003</fullName>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>