force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_MotivoDevolucionAlta__c.field-meta.xml
<CustomField>
    <fullName>SPV_MotivoDevolucionAlta__c</fullName>
    <description>Se activará el campo en caso de pulsar &quot;Devolver Alta&quot; en estado de &quot;Análisis y Decisión&quot;</description>
    <label>Motivo Devolución a alta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPV_001</fullName>
                <label>Error asignación</label>
            </value>
            <value>
                <fullName>SPV_002</fullName>
                <label>Falta documentación de organismo</label>
            </value>
            <value>
                <fullName>SPV_003</fullName>
                <label>Error datos Alta</label>
            </value>
            <value>
                <fullName>SPV_004</fullName>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>