force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_MotivoProrroga__c.field-meta.xml
<CustomField>
    <fullName>SPV_MotivoProrroga__c</fullName>
    <label>Motivo Prórroga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPV_001</fullName>
                <label>Negociación por indicaciones AJ</label>
            </value>
            <value>
                <fullName>SPV_002</fullName>
                <label>Pendiente validación AJ</label>
            </value>
            <value>
                <fullName>SPV_003</fullName>
                <label>Falta Información fundamental</label>
            </value>
            <value>
                <fullName>SPV_004</fullName>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>