force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_NegociacionFinalizadaRectificacion__c.field-meta.xml
<CustomField>
    <fullName>SPV_NegociacionFinalizadaRectificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se indica si las negociaciones que se han llevado a cabo en la rectificación están finalizadas o no</description>
    <label>Negociación en rectificación finalizada</label>
    <type>Checkbox</type>
</CustomField>