force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_ObservacionesDescartar__c.field-meta.xml
<CustomField>
    <fullName>SPV_ObservacionesDescartar__c</fullName>
    <description>En caso de que el motivo descarte sea &quot;Otros&quot;, se deberán indicar las observaciones</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones Descartar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>