force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_ObservacionesDevolucionLetrado__c.field-meta.xml
<CustomField>
    <fullName>SPV_ObservacionesDevolucionLetrado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones Devolución Letrado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>