force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_ObservacionesReapertura__c.field-meta.xml
<CustomField>
    <fullName>SPV_ObservacionesReapertura__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones Reapertura</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>