force-app/main/default/objects/CBK_Case_Extension__c/fields/SPV_ResultadoNegociacionRectificacion__c.field-meta.xml
<CustomField>
    <fullName>SPV_ResultadoNegociacionRectificacion__c</fullName>
    <description>Resultado de la negociación cuando la reclamación ha sido rectificada</description>
    <label>Resultado negociación en rectificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acuerdo revocado</fullName>
            </value>
            <value>
                <fullName>Con acuerdo</fullName>
            </value>
            <value>
                <fullName>Con acuerdo parcial</fullName>
            </value>
            <value>
                <fullName>Sin acuerdo</fullName>
            </value>
            <value>
                <fullName>Sin respuesta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>