force-app/main/default/objects/CBK_Case_Extension__c/recordTypes/SAC_ReclamacionCaseExt.recordType-meta.xml
<RecordType>
    <fullName>SAC_ReclamacionCaseExt</fullName>
    <active>true</active>
    <label>ReclamacionSAC</label>
</RecordType>