force-app/main/default/objects/CBK_Case_Extension__c/recordTypes/SPV_ReclamacionCaseExt.recordType-meta.xml
<RecordType>
    <fullName>SPV_ReclamacionCaseExt</fullName>
    <active>true</active>
    <label>ReclamacionSPV</label>
</RecordType>